--- a/views/listEvents.html
+++ b/views/listEvents.html
@@ -8,6 +8,7 @@
       <!-- API MAPS -->
       <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
       <link rel="stylesheet" type="text/css" href="../css/style.css" />  
+      <link rel="stylesheet" type="text/css" href="../css/listEvents.css" />  
   </head>
   <body>
       <header>
@@ -41,7 +42,7 @@
           </div>
         </section>
 <!-- TELA PARA ATUALIZAR OS EVENTOS - só aparece quando clicado no link "EDITAR" no link criado no JS -->
-        <section id="telaCadastro" class="left-section"hidden >
+        <section id="telaCadastro" class="left-section" hidden>
           <div class="telaCad">
             <h2>EVENTO</h2>
             <form action="/novo" method="post" id="eventForm" >               
