--- a/views/listEvents.html
+++ b/views/listEvents.html
@@ -5,10 +5,15 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>LISTA DE EVENTOS</title>
-      <!-- API MAPS -->
-      <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
       <link rel="stylesheet" type="text/css" href="../css/style.css" />  
       <link rel="stylesheet" type="text/css" href="../css/listEvents.css" />  
+      <!-- API MAPS -->
+      <script  type="module" src="../js/funcoes.js"></script>
+      <script  type="module" src="../js/crud-maps.js"></script>
+
+      <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+      
   </head>
   <body>
       <header>
@@ -71,8 +76,7 @@
       </main>
     <footer>
       Banco de Dados II - 2023 © - <small>Analise e Desenvolvimento de Sistemas</small> - ADS™ 
-    </footer>
-      <script type="module" src="./js/maps_read.js"></script>
+    </footer>      
       <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "", v: "weekly"});</script>
   </body>
