--- a/views/listEvents.html
+++ b/views/listEvents.html
@@ -22,20 +22,33 @@
               <li><a href="/views/index.html">Página Inicial</a></li>
               <li><a href="#">Sobre</a></li>
               <li><a href="/views/listEvents.html" >Eventos Cadastrados</a></li>
-              <li><a href="#">Contato</a></li>
+              <li><a href="#" id="recuperarEvento">Recuperar Evento</a></li>
+              <li><a href="#" >Contato</a></li>
             </ul>
             </nav>
             <img src="https://cdn-icons-png.flaticon.com/512/888/888856.png?w=360" alt="Logo" class="logo">
       </header>
       <main>
-        <!-- Listando todos os eventos do banco e mostrando na página com innerHTML -->
+<!-- Listando todos os eventos do banco MONGO e mostrando na página com innerHTML -->
         <section id="telaEventos" class="left-section">
           <div  class="formsList">
             <div class="title">
               <h2>EVENTOS CADASTRADOS</h2>               
             </div>
-            <input id="busca" class="inputPesquisa" type="text" name="pesquisa" placeholder="Buscar Eento...">
+            <input id="busca" class="inputPesquisa" type="text" name="pesquisa" placeholder="Buscar Evento...">
             <div id="listaDeEventos">
+            </div>                
+          </div>
+        </section>
+<!-- Listando todos os eventos do banco REDIS e mostrando na página com innerHTML -->
+        <section id="telaEventosRedis" class="left-section" hidden>
+          <div  class="formsList">
+            <div class="title">
+              <h2>Recuperar Evento</h2>               
+            </div>
+            <input id="buscaRedis" class="inputPesquisa" type="text" name="pesquisa" placeholder="Buscar Por Autor...">
+            <button id="btnRedis" class="cad">RECUPERAR</button>
+            <div id="listaDeEventosRedis">
             </div>                
           </div>
         </section>
@@ -67,10 +80,10 @@
             <a href="#" class="cad">OPÇÃO 3</a> -->           
           <div id="map"></div>           
         </section>
-      </main>
+      </main>      
     <footer>
       Banco de Dados II - 2023 © - <small>Analise e Desenvolvimento de Sistemas</small> - ADS™ 
-    </footer>      
+    </footer>       
       <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
         ({key: "", v: "weekly"});</script>
   </body>
