--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,10 @@
   width: 100%; 
   height: 85vh;
   border-radius: 1%;
-
 }
 @media screen and (max-width: 768px) {
   .maps {
-    height: 200px; /* Reduzir a altura para dispositivos menores */
-    
+    height: 60vh;
   }
 }
  /* FIM MAPS */
@@ -26,7 +24,7 @@ header {
 }
 main {
   display: flex;
-  height: calc(100% - 40px); /* Altura total da janela menos a altura do cabeçalho e rodapé */
+  height: calc(100% - 40px); 
 }
 /* Dividindo as sections e divs da Página */
 .left-section, .right-section {
@@ -34,110 +32,108 @@ main {
   padding: 20px; 
   /* Defina um tamanho inicial para a seção */
   width: 100%;
-  max-width: 500px; /* Por exemplo, um máximo de 500px */
-  margin: 0 auto; /* Centralize horizontalmente a seção */
+  max-width: 500px; 
+  margin: 0 auto; 
 }
 /* Defina regras de estilo específicas para tamanhos de tela menores */
 @media screen and (max-width: 768px) {
   .right-section {
-    max-width: 100%; /* Altere o tamanho máximo para preencher a largura total */
+    max-width: 100%; 
   }
 }
 .left-section {
-  width: 100%; /* Define a largura da seção como 100% */
-  max-width: 500px; /* Define um tamanho máximo para a seção */
-  margin: 0 auto; /* Centraliza a seção horizontalmente */  
+  width: 100%; 
+  max-width: 500px; 
+  margin: 0 auto;  
 }
 @media screen and (max-width: 768px) {
   .left-section {
-    max-width: 100%; /* Altera o tamanho máximo para preencher a largura total */
-    padding: 10px; /* Adiciona um espaçamento interno para melhor legibilidade */
+    max-width: 100%; 
+    padding: 10px; 
     font-size: 2vw;
+}
+.caixaTextoCadastro,
+  .caixaTextoCadastro2 {
+    width: 100%; 
   }
-  .caixaTextoCadastro,
-      .caixaTextoCadastro2 {
-        width: 100%; /* Define a largura dos inputs e textarea como 100% */
-      }
-    }
-    .right-section {
-      min-width: calc(100% - 30%);
-        /* background-color: #f9f9f9; */
-      }
-  /* CABEÇALHO */  
-  header {
-    background-color: #f1f1f1;
+}
+.right-section {
+  min-width: calc(100% - 30%);
+  /* background-color: #f9f9f9; */
+}
+/* CABEÇALHO */  
+header {
+  background-color: #f1f1f1;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}  
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}  
+nav li {
+  float: left;
+}  
+nav li a {
+  font-size: 25px;
+  display: block;
+  color: #686767;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}  
+nav li a:hover {
+  font-size: 26px;
+  font-weight: bold;
+  color: #000000;
+  transform: scale(1.2);
+}  
+.logo {
+  max-width:3%;
+  height: auto;
+}
+.logo:hover{
+  transform: scale(1.2);
+}
+/* Tela de cadastro */
+.telaDeCadastro{
+  border: 1px solid #ccc;
+  border-radius: 5%;
+  padding: 3%;
+  background-color: rgba(243, 243, 252, 0.3);
+}
+.caixaTextoCadastro,
+  .caixaTextoCadastro2 {
+    opacity: 0.5;
+    width: 100%;
     padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }  
-  nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }  
-  nav li {
-    float: left;
-  }  
-  nav li a {
-    font-size: 25px;
-    display: block;
-    color: #686767;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }  
-  nav li a:hover {
-    font-size: 26px;
-    font-weight: bold;
-    color: #000000;
-    transform: scale(1.2);
-  }  
-  .logo {
-    max-width:3%;
-    height: auto;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    box-shadow: #333;
   }
-  .logo:hover{
-    transform: scale(1.2);
+.caixaTextoCadastro:focus,
+  .caixaTextoCadastro2:focus {
+    opacity: 1;
+    outline: none; 
+    border-color: #0f13ea; 
+    box-shadow: 0 0 5px rgba(16, 45, 189, 0.5);
   }
-    /* Tela de cadastro */
-    .telaDeCadastro{
-      border: 1px solid #ccc;
-      border-radius: 5%;
-      padding: 3%;
-      background-color: rgba(243, 243, 252, 0.3);
-    }
-    .caixaTextoCadastro,
+#btnsalvar {
+  display: block;
+  width: 100%;
+}
+/* Estilos para dispositivos menores */
+@media screen and (max-width: 480px) {
+  .caixaTextoCadastro,
     .caixaTextoCadastro2 {
-      opacity: 0.5;
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      box-sizing: border-box;
-      border: 1px solid #ccc;
-      box-shadow: #333;
+      padding: 8px;
     }
-    .caixaTextoCadastro:focus,
-    .caixaTextoCadastro2:focus {
-      opacity: 1;
-      outline: none; /* remover o contorno ao focar */
-      border-color: #0f13ea; /* cor da borda ao focar */
-      box-shadow: 0 0 5px rgba(16, 45, 189, 0.5);
-    }
-    
-    #btnsalvar {
-      display: block;
-      width: 100%;
-    }
-    
-    /* Estilos para dispositivos menores */
-    @media screen and (max-width: 480px) {
-      .caixaTextoCadastro,
-      .caixaTextoCadastro2 {
-        padding: 8px;
-      }
-    }
+}
 /* Tela de cadastro */
 /* Ancora de Botão CAD */
 .cad {
