--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 2px;
-    background-color: rgb(0, 26, 255); /* Cor do efeito */
+    background-color: rgb(0, 26, 255); 
 }  
 .btnMapModo{
     opacity: 0.5;
