--- a/css/listEvents.css
+++ b/css/listEvents.css
@@ -49,3 +49,9 @@
     text-align: right;
     font-size: small;
 }
+.nomeEvento a{
+    text-decoration: none;  
+    color: #030303;
+     font-weight: bold;
+      font-size: 18px;
+}
