Só revisando algumas palavras que estão escritas erradas ou colocadas em lugares melhores

--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,7 @@
                 <label for="dataTermino" style="opacity: 0.3;">Término</label>
                   <input class="caixaTextoCadastro" type="date" name="nome" id="dataTermino" placeholder="dd-mm-yyyy" required>
                 <label for="coordenadas"></label>
-                  <input  class="caixaTextoCadastro" type="text" name="nome" id="eventCoordinates" placeholder="Selecione no mapa" disabled="" required>
+                  <input  class="caixaTextoCadastro" type="text" name="nome" id="eventCoordinates" placeholder="Selecione no mapa" disabled="" style="display: none;" required>
                 <label for="descricao"></label>
                   <textarea maxlength="350" class="caixaTextoCadastro2" type="text" name="nome" id="eventDescription" placeholder="Descrição do evento em 350 caracteres ou menos"></textarea>
                 <button id="btnSalvar" type="button" class="cad"  method="POST" > CADASTRAR </button>
